--- a/package.json
+++ b/package.json
@@ -18,12 +18,15 @@
     "@tailwindcss/typography": "^0.5.16",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "easymde": "^2.19.0",
     "lucide-react": "^0.476.0",
-    "next": "15.1.7",
+    "markdown-it": "^14.1.0",
+    "next": "^15.2.0-canary.76",
     "next-auth": "^5.0.0-beta.25",
     "next-sanity": "^9.8.58-canary.0",
     "react": "^18.3.0",
     "react-dom": "^18.3.0",
+    "react-is": "^19.0.0",
     "sanity": "^3.77.2",
     "sanity-plugin-markdown": "^5.0.0",
     "server-only": "^0.0.1",
@@ -33,6 +36,7 @@
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
+    "@types/markdown-it": "^14.1.2",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
