--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "typegen": "sanity schema extract --path=./sanity/extract.json && sanity typegen generate"
   },
   "dependencies": {
+    "@radix-ui/react-avatar": "^1.1.3",
     "@radix-ui/react-slot": "^1.1.2",
     "@sanity/image-url": "^1.1.0",
     "@sanity/vision": "^3.77.2",
@@ -22,7 +23,7 @@
     "easymde": "^2.19.0",
     "lucide-react": "^0.476.0",
     "markdown-it": "^14.1.0",
-    "next": "^15.2.1-canary.0",
+    "next": "^15.2.1-canary.1",
     "next-auth": "^5.0.0-beta.25",
     "next-sanity": "^9.8.58-canary.0",
     "react": "^18.3.0",
