Remove devIndicators from Next.js config; update dev script and downgrade Next.js and next-auth versions

--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev --turbopack",
+    "dev": "next dev",
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
@@ -23,8 +23,8 @@
     "easymde": "^2.19.0",
     "lucide-react": "^0.476.0",
     "markdown-it": "^14.1.0",
-    "next": "^15.2.1-canary.1",
-    "next-auth": "^5.0.0-beta.25",
+    "next": "15.0.0-canary.183",
+    "next-auth": "^5.0.0-beta.22",
     "next-sanity": "^9.8.58-canary.0",
     "react": "^18.3.0",
     "react-dom": "^18.3.0",
