--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "easymde": "^2.19.0",
     "lucide-react": "^0.476.0",
     "markdown-it": "^14.1.0",
-    "next": "15.0.0-canary.183",
+    "next": "^15.2.1-canary.2",
     "next-auth": "^5.0.0-beta.22",
     "next-sanity": "^9.8.58-canary.0",
     "react": "^18.3.0",
